--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -186,6 +186,8 @@ This led to investigations like \cite{Bell2009,SuKeutzer2012} and resulted in th
 
 Algorithms from \cite{Bell2009} have since been included in the CUDA SDK as the cuSPARSE library. 
 
+Also, ViennaCL provides seamless interoperability with the Boost::UBLAS, EIGEN and MTL libraries via C++ templates. We test the performance of our algorithm on one or more CPUs with the Boost::UBLAS library. 
+
 %TODO: get date
 NVidia eventually included a library named CUSPARSE as part of the CUDA SDK. Initial releases were 
 Developers either implemented their own kernels (as we did in \cite{BolligFlyerErlebacher2012}) or   
